# gtk-updates-daemon

./: .gitignore  Makefile  Makefile.am  README  configure.ac
data/: Makefile.am  gtk-updates-daemon-autostart.desktop.in  org.gtk.UpdatesDaemon.gschema.xml.in.in  org.huayra.UpdatesNotifier.gschema.xml.in.in  pk-updates-notifier-autostart.desktop.in
po/: POTFILES.in  POTFILES.skip  es_AR.po  gtk-updates-daemon.pot  pk-updates-notifier.pot
src/: Makefile  Makefile.am  gtk-updates-daemon-autostart.desktop  gtk-updates-daemon.c  gud-pk-progress-bar.c  gud-pk-progress-bar.h  gud-sync-helper.c  gud-sync-helper.h  pk-updates-notifier.c
